<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <!-- App Stuff -->
    <string name="app_name">Hometown Mobile</string>
    <string name="action_settings">Settings</string>
    <string name="str_fdic_icon">FDIC Icon</string>
    
    <!-- User interface labels and strings -->
    
    <!-- MainActivity Strings -->
    <string name="htb_logo">Hometown Bank Logo</string>
    <string name="str_hometown_mobile">Hometown Mobile</string>
    <string name="str_banking_should">The Way Banking Should Be.</string>
	<string name="str_signon_button">Account Sign&#8211;on Button</string>
    <string name="str_branch_locations_button">Branch Locations Button</string>
    <string name="str_deposit_button">Deposit Rates button</string>
    <string name="str_mortgage_button">Mortgage Rates Button</string>
    <string name="str_contact_button">Contact Us Button</string>

    <string name="str_full_website">Full Website</string>
    
    <!-- ContactUsActivity Strings -->
    <string name="app_contact_us">Contact Us</string>
    <string name="str_contact_headline">Contact Hometown Bank</string>
    <string name="str_contact_subheadline">Our Customer Service staff will respond promptly to your questions and comments.</string>
    <string name="str_contact_reminder">Reminder: Please do not include any account numbers or pins in an email. This helps us maintain a high level of security for your account. If you require immediate assitance regarding your account, please call us.</string>
    <string name="str_send_email_button">Send Email Button</string>
    <string name="str_toll_free">Toll-Free Telephone</string>
    <string name="str_phone_number">(888) 307&#8211;5887</string>
    
    <!-- BranchesActivity String -->
    <string name="app_branches">Branch Locations</string>

    <!-- Location stuff -->

    <!-- Address format -->
    <string name="address_output_string">%1$s %2$s %3$s</string>

    <!-- Latitude, longitude format -->
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>

    <!-- Menu title -->
    <string name="action_settings">Settings</string>

    <!-- Labels -->
    <string name="latlng">Lat/Long:</string>
    <string name="address">Address:</string>

    <!-- Messages -->
    <string name="connected">Client connected</string>
    <string name="connection_error_code_unknown">Unknown connection error code:  %1$d</string>
    <string name="connection_failed">Connection failed</string>
    <string name="disconnected">Client disconnected</string>
    <string name="get_address">Get Address</string>
    <string name="get_location">Get Location</string>
    <string name="illegal_argument_exception">
        Illegal arguments: Latitude %1$.8f Longitude %2$.8f
    </string>
    <string name="invalid_action">Invalid intent action %1$s</string>
    <string name="invalid_integer_id">Invalid integer request ID: %1$s</string>
    <string name="IO_Exception_getFromLocation">IO Exception in Geocoder.getFromLocation()</string>
    <string name="location_requested">Periodic updates requested</string>
    <string name="location_updated">Location updated</string>
    <string name="location_update_error">Location update failed</string>
    <string name="location_update_error_detail">
        Location update error. code %1$d message %2$s
    </string>
    <string name="location_update_missing_update">
        Location update error. No incoming location.
    </string>
    <string name="location_updates_stopped">Periodic updates stopped</string>
    <string name="log_new_location">New location: %1$s</string>
    <string name="no_address_found">No address found for location</string>
    <string name="no_connection">No connection: Cannot request location</string>
    <string name="no_geocoder_available">Cannot get address. No geocoder available.</string>
    <string name="no_location_available">Location not available</string>
    <string name="resolved">Error resolved. Please re-try operation.</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="periodic_update_stop">Stopping periodic updates</string>
    <string name="play_services_available">Google Play services is available</string>
    <string name="request_location_updates_in_progress">
        Can\'t request location updates, previous request hasn\'t finished
    </string>
    <string name="start_updates">Start Updates</string>
    <string name="stop_updates">Stop Updates</string>
    <string name="unknown">--Unknown--</string>
    <string name="unknown_activity_request_code">
        Received an unknown activity request code %1$d in onActivityResult.
    </string>
    
    <!-- Colors -->
    <color name="color_phone">#87CEFA</color>
</resources>
