<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactUsActivity" >

    <TextView
        android:id="@+id/text_bellow_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:text="@string/str_contact_headline"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:paddingTop="@dimen/activity_vertical_margin" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_bellow_map"
        android:layout_centerHorizontal="true"
        android:paddingTop="20dp"
        android:text="@string/str_contact_subheadline"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="14sp" 
        
        android:paddingBottom="@dimen/activity_vertical_margin"
  		android:paddingLeft="@dimen/activity_horizontal_margin"
    	android:paddingRight="@dimen/activity_horizontal_margin" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:paddingTop="25dp"
        android:text="@string/str_contact_reminder"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:paddingBottom="@dimen/activity_vertical_margin"
    	android:paddingLeft="@dimen/activity_horizontal_margin"
    	android:paddingRight="@dimen/activity_horizontal_margin" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginRight="17dp"
        android:layout_marginTop="46dp"
        android:background="@null"
        android:src="@drawable/send_email_button" 
        android:contentDescription="@string/str_send_email_button" 
        android:onClick="sendEmailButton" />

    <ImageView
        android:id="@+id/fdic_icon"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:clickable="false"
        android:contentDescription="@+id/fdic_icon"
        android:duplicateParentState="false"
        android:longClickable="false"
        android:src="@drawable/fdic" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/fdic_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:paddingTop="1dp"
        android:text="@string/str_phone_number"
        android:clickable="true"
        android:onClick="contactUsPhone"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/color_phone" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:text="@string/str_toll_free"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

</RelativeLayout>